chore: more custom styles

--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -17,4 +17,10 @@ article {
 aside {
     flex: 1;
     overflow-y: auto;
+    background-color: #f4f4f4;
+}
+
+.navigation-link {
+    display: block;
+    margin-top: 20px;
 }
