--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -43,11 +43,8 @@ header {
   right: 20%;
   display: flex;
   flex-direction: column;
-  margin-bottom: -2.2rem;
-  background-blend-mode: color;
-  background: rgba(0, 0, 0, 1);
   background: radial-gradient(
-    85.9% 85.9% at 50% 14.1%,
+    85.9% 55.9% at 50% 14.1%,
     rgba(41, 48, 61, 0.0001) 0%,
     #071629 100%
   );
@@ -232,12 +229,26 @@ main {
   max-width: 255px;
 }
 
-.videos__inner > div > img {
+.videos__inner .preview {
+  position: relative;
+}
+
+.videos__inner > div > .preview img.preview__image {
   width: 100%;
   height: 154px;
   border-radius: 5px 5px 0px 0px;
   margin-bottom: 10px;
   object-fit: cover;
+}
+
+.videos__inner > div > .preview img.play__button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 65px;
+  width: 65px;
+  cursor: pointer;
 }
 
 .videos__inner > div > h2 {
@@ -411,4 +422,205 @@ footer {
   text-align: center;
   font-size: 12px;
   color: white;
+}
+
+/* make the homepage responsive on mobile screens */
+
+@media only screen and (max-width: 600px) {
+  header {
+    background-size: 100% 100%;
+    padding: 2% 5% 2% 5%;
+  }
+
+  .banner {
+    left: 0;
+    right: 0;
+    margin-bottom: 0;
+  }
+
+  .banner__learn > h1 {
+    font-size: 60px;
+    line-height: 75px;
+  }
+
+  .banner__learn > p {
+    font-size: 12px;
+    line-height: 15px;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+
+  .banner__courses > h2 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .banner__courses__card {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+
+  .banner__courses__card > h3 {
+    font-size: 14px;
+    line-height: 21px;
+  }
+
+  .banner__courses__card > p {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .quotes {
+    padding: 40px;
+  }
+
+  .quotes__inner img {
+    height: 80px;
+    width: 80px;
+  }
+
+  .quotes__inner > div {
+    margin-left: 20px;
+  }
+
+  .quotes__inner blockquote {
+    font-size: 14px;
+  }
+
+  .quotes__inner .names {
+    font-size: 16px;
+  }
+
+  .quotes__inner .presenter {
+    font-size: 14px;
+  }
+
+  .videos {
+    padding: 20px;
+  }
+
+  .videos > h1 {
+    font-size: 20px;
+  }
+
+  .videos__inner {
+    flex-direction: column;
+  }
+
+  .videos__inner > div {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .videos__inner > div > .preview img.preview__image {
+    height: 100px;
+  }
+
+  .videos__inner > div > .preview img.play__button {
+    height: 40px;
+    width: 40px;
+  }
+
+  .videos__inner > div > h2 {
+    font-size: 16px;
+  }
+
+  .videos__inner > div > p {
+    font-size: 12px;
+  }
+
+  .videos__inner .profile img {
+    height: 20px;
+    width: 20px;
+  }
+
+  .videos__inner .profile h3 {
+    font-size: 12px;
+  }
+
+  .videos__inner .ratings > div img {
+    height: 10px;
+    width: 10px;
+  }
+
+  .videos__inner .ratings > p {
+    font-size: 12px;
+  }
+
+  .membership {
+    padding: 20px;
+  }
+
+  .membership > h1 {
+    font-size: 20px;
+  }
+
+  .membership .row {
+    flex-direction: column;
+    padding-top: 40px;
+  }
+
+  .membership .row > div {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .membership .row > div > h2 {
+    font-size: 16px;
+  }
+
+  .membership .row > div > p {
+    font-size: 12px;
+  }
+
+  .faq {
+    padding: 20px;
+  }
+
+  .faq > h1 {
+    font-size: 20px;
+  }
+
+  .faq__inner > div {
+    flex-direction: column;
+  }
+
+  .faq__inner > div > div {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .faq__inner > div > div > h2 {
+    font-size: 16px;
+  }
+
+  .faq__inner > div > div > p {
+    font-size: 12px;
+  }
+
+  footer {
+    padding: 10px;
+  }
+
+  .footer__inner > div {
+    flex-direction: column;
+  }
+
+  .footer__inner > div > div {
+    margin: 20px auto;
+  }
+
+  .footer__inner > p {
+    font-size: 10px;
+  }
+
+  .nav-links > a {
+    padding-right: 20px;
+  }
+
+  .banner__learn > button,
+  .membership button {
+    padding: 0.5rem;
+    margin: 1rem;
+  }
 }
